<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fillViewport="true"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_30"
                android:layout_marginEnd="@dimen/margin_30"
                android:layout_marginBottom="@dimen/margin_8"
                android:lineHeight="@dimen/text_size_16"
                android:text="@string/password_recovery_enter_new_password"
                android:textColor="@color/grey" />

            <ru.ar4i.delivery.InputView
                android:id="@+id/ivPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:iv_et_hint="@string/password_recovery_password"
                app:iv_tv_hint="@string/password_recovery_password" />

            <ru.ar4i.delivery.InputView
                android:id="@+id/ivRepeatPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:iv_et_hint="@string/password_recovery_repeat_password"
                app:iv_tv_hint="@string/password_recovery_repeat_password" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                style="@style/BaseButton.Primary"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_62"
                android:layout_marginTop="@dimen/margin_30"
                android:text="@string/password_recovery_save" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>